--- a/wiki/index.html
+++ b/wiki/index.html
@@ -699,6 +699,8 @@ Error message and password prompt
 
 <li>Get goodies</li>
 
+<li>goalng CI build 二进制/tmp/zero-redis: No such file or directory</li>
+
 <li>golang</li>
 
 <li>golang ci runner</li>
@@ -730,6 +732,8 @@ Error message and password prompt
 <li>Muffin 2</li>
 
 <li>Muffin!</li>
+
+<li>musl</li>
 
 <li>networks</li>
 
@@ -10946,14 +10950,14 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div created="20200616145411702" modified="20200616145414140" title="$:/GitHub/Filename">
 <pre>index.html</pre>
 </div>
-<div created="20200616145409649" modified="20200616145410057" title="$:/GitHub/Path">
-<pre>wiki</pre>
+<div created="20200616145409649" modified="20200619103343042" title="$:/GitHub/Path">
+<pre>wiki/</pre>
 </div>
-<div created="20200616145404278" modified="20200616145406503" title="$:/GitHub/Repo">
-<pre>YongHaoWu/markdown_notes</pre>
+<div created="20200616145404278" modified="20200619103358357" title="$:/GitHub/Repo">
+<pre>YongHaoWu/YongHaoWu.github.io</pre>
 </div>
-<div created="20200616145354076" modified="20200616155734989" title="$:/GitHub/Username">
-<pre>YongHao</pre>
+<div created="20200616145354076" modified="20200619103201450" title="$:/GitHub/Username">
+<pre>YongHaoWu</pre>
 </div>
 <div bag="default" created="20200210162320311" creator="HC Haase" modified="20200521150911135" modifier="HC Haase" revision="0" tags="$:/tags/Macro" title="$:/HCHaase/macros/icon" type="text/vnd.tiddlywiki">
 <pre>\define icon(icon navigate tooltip) 
@@ -17031,8 +17035,8 @@ exports.context = contextWidget;
 <div created="20200616155538724" modified="20200616155538724" title="$:/state/tab-1163638994">
 <pre>$:/core/ui/MoreSideBar/Plugins/Languages</pre>
 </div>
-<div created="20200418121928767" modified="20200617031909917" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20200418121928767" modified="20200619102920918" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
 <div created="20200616144657561" modified="20200616145421832" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
@@ -17070,7 +17074,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200617031908007" list="[[etcd 无法watch]] CIDR Note" modified="20200617032012123" title="$:/StoryList">
+<div created="20200619102908638" list="$:/ControlPanel CIDR Note" modified="20200619102918545" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521135635795" tags="$:/giffmex/bigeditarea" title="$:/tags/EditToolbar">
@@ -17101,7 +17105,7 @@ exports.context = contextWidget;
         },
         &quot;$:/info/url/full&quot;: {
             &quot;title&quot;: &quot;$:/info/url/full&quot;,
-            &quot;text&quot;: &quot;file:///Users/yonghao.hu/Downloads/markdown_notes/wiki/index.html&quot;
+            &quot;text&quot;: &quot;file:///Users/yonghao.hu/Downloads/wiki/index.html&quot;
         },
         &quot;$:/info/url/host&quot;: {
             &quot;title&quot;: &quot;$:/info/url/host&quot;,
@@ -17121,7 +17125,7 @@ exports.context = contextWidget;
         },
         &quot;$:/info/url/pathname&quot;: {
             &quot;title&quot;: &quot;$:/info/url/pathname&quot;,
-            &quot;text&quot;: &quot;/Users/yonghao.hu/Downloads/markdown_notes/wiki/index.html&quot;
+            &quot;text&quot;: &quot;/Users/yonghao.hu/Downloads/wiki/index.html&quot;
         },
         &quot;$:/info/url/search&quot;: {
             &quot;title&quot;: &quot;$:/info/url/search&quot;,
@@ -17146,7 +17150,7 @@ exports.context = contextWidget;
     }
 }</pre>
 </div>
-<div created="20200418122623650" modified="20200617041617359" title="$:/temp/NewTagName">
+<div created="20200418122623650" modified="20200617082346372" title="$:/temp/NewTagName">
 <pre></pre>
 </div>
 <div author="Paco Rivière" core-version="&gt;=5.0.0" created="20200616152848736" dependents="" description="Catalan (Spain)" icon="data:image/svg+xml,%3C%3Fxml%20version%3D%221.0%22%20encoding%3D%22UTF-8%22%3F%3E%0A%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22810%22%20height%3D%22540%22%3E%0A%3Crect%20width%3D%22810%22%20height%3D%22540%22%20fill%3D%22%23FCDD09%22%2F%3E%0A%3Cpath%20stroke%3D%22%23DA121A%22%20stroke-width%3D%2260%22%20d%3D%22M0%2C90H810m0%2C120H0m0%2C120H810m0%2C120H0%22%2F%3E%0A%3C%2Fsvg%3E" modified="20200616152848736" name="ca-ES" original-plugin-type="language" original-tags="" original-title="$:/languages/ca-ES" original-type="application/json" requires-reload="no" server-url="https://tiddlywiki.com/library/v5.1.22/index.html" tags="$:/tags/RemoteAssetInfo" title="$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.22/index.html/$:/languages/ca-ES" type="text/vnd.tiddlywiki" version="5.1.22">
@@ -18111,8 +18115,8 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200616183644116" modified="20200616183644116" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200616161922967" modified="20200617031838525" title="$:/temp/tobibeer/preview-1-tiddler">
-<pre>Linux Signal</pre>
+<div created="20200616161922967" modified="20200619102908365" title="$:/temp/tobibeer/preview-1-tiddler">
+<pre>CIDR</pre>
 </div>
 <div bag="default" created="20200414145220556" modified="20200616183714956" revision="0" title="$:/theme" type="text/vnd.tiddlywiki">
 <pre>$:/themes/tiddlywiki/seamless</pre>
@@ -18376,6 +18380,24 @@ Now go back to [[Welcome to Stroll]] to continue the tutorial.</pre>
 *The [ext[TiddlyWiki toolmap|https://dynalist.io/d/zUP-nIWu2FFoXH-oM7L7d9DM]] is a list of hudreds of plugins you can use with Stroll. Keep in mind that plugins that tamper with the layout could break the Stroll layout.
 </pre>
 </div>
+<div created="20200617082304992" modified="20200617092328868" tags="linux golang ci" title="goalng CI build 二进制/tmp/zero-redis: No such file or directory" type="text/x-markdown">
+<pre>`go releaser`在CI里编译好的文件，跑起来提示：/tmp/zero-redis: No such file or directory
+
+`readelf -a  /tmp/zero-redis  | less`可以看到，二进制依赖了这个动态链接库：
+&gt;       [Requesting program interpreter: /lib/ld-musl-x86_64.so.1]
+
+本地没有这个文件，所以报错了：
+
+&gt; ls /lib/ld-musl-x86_64.so.1
+ls: cannot access '/lib/ld-musl-x86_64.so.1': No such file or directory
+
+`apt install musl` 安装[musl](https://musl.libc.org/)，就有这个动态链接库了。
+运行一切顺利。
+
+## 解释
+[[musl]]就是一个libc库(简单说就是C的库函数实现）
+&gt; [[musl]] is an implementation of the C standard library built on top of the Linux system call API, including interfaces defined in the base language standard, POSIX, and widely agreed-upon extensions. musl is lightweight, fast, simple, free, and strives to be correct in the sense of standards-conformance and safety.</pre>
+</div>
 <div created="20200616145626358" modified="20200616145626358" title="golang">
 <pre></pre>
 </div>
@@ -18548,6 +18570,9 @@ One more thing about linking: if you change the name of a tiddler, all the links
 <pre>Clicking the various checkboxes in the {{$:/core/images/preview-open}} tab in the sidebar will change the appearance of the items in the references section (the list of backlinks) at the bottom of this tiddler. 
 
 When you are done playing with my dog, return to [[Welcome to Stroll]] to continue the tutorial.</pre>
+</div>
+<div created="20200617082955041" modified="20200617082955041" title="musl">
+<pre></pre>
 </div>
 <div created="20200617041105043" modified="20200617041105043" title="networks">
 <pre></pre>
