--- a/wiki/index.html
+++ b/wiki/index.html
@@ -199,6 +199,8 @@ Error message and password prompt
 
 <li>$:/config/_sq/Stories/story2</li>
 
+<li>$:/config/AutoSave</li>
+
 <li>$:/config/DownloadSaver/AutoSave</li>
 
 <li>$:/config/EditorTypeMappings/text/vnd.tiddlywiki</li>
@@ -685,11 +687,13 @@ Error message and password prompt
 
 <li>Advanced stuff</li>
 
+<li>alpine</li>
+
 <li>Autocompletion</li>
 
-<li>CIDR</li>
+<li>ci</li>
 
-<li>CIDR 1</li>
+<li>CIDR</li>
 
 <li>Dave Gifford</li>
 
@@ -1320,6 +1324,9 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 </pre>
 </div>
 <div bag="default" created="20170615081040584" modified="20200504143613685" revision="0" title="$:/config/_sq/Stories/story2" type="text/vnd.tiddlywiki">
+<pre>yes</pre>
+</div>
+<div created="20200619183447964" modified="20200619183448547" title="$:/config/AutoSave">
 <pre>yes</pre>
 </div>
 <div created="20200616145157008" modified="20200616145157008" title="$:/config/DownloadSaver/AutoSave">
@@ -10950,14 +10957,14 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div created="20200616145411702" modified="20200616145414140" title="$:/GitHub/Filename">
 <pre>index.html</pre>
 </div>
-<div created="20200616145409649" modified="20200619103343042" title="$:/GitHub/Path">
-<pre>wiki/</pre>
+<div created="20200616145409649" modified="20200616145410057" title="$:/GitHub/Path">
+<pre>wiki</pre>
 </div>
-<div created="20200616145404278" modified="20200619103358357" title="$:/GitHub/Repo">
+<div created="20200616145404278" modified="20200619183543310" title="$:/GitHub/Repo">
 <pre>YongHaoWu/YongHaoWu.github.io</pre>
 </div>
-<div created="20200616145354076" modified="20200619103201450" title="$:/GitHub/Username">
-<pre>YongHaoWu</pre>
+<div created="20200616145354076" modified="20200616155734989" title="$:/GitHub/Username">
+<pre>YongHao</pre>
 </div>
 <div bag="default" created="20200210162320311" creator="HC Haase" modified="20200521150911135" modifier="HC Haase" revision="0" tags="$:/tags/Macro" title="$:/HCHaase/macros/icon" type="text/vnd.tiddlywiki">
 <pre>\define icon(icon navigate tooltip) 
@@ -17035,10 +17042,10 @@ exports.context = contextWidget;
 <div created="20200616155538724" modified="20200616155538724" title="$:/state/tab-1163638994">
 <pre>$:/core/ui/MoreSideBar/Plugins/Languages</pre>
 </div>
-<div created="20200418121928767" modified="20200619102920918" title="$:/state/tab-1749438307">
+<div created="20200418121928767" modified="20200619183407272" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Saving</pre>
 </div>
-<div created="20200616144657561" modified="20200616145421832" title="$:/state/tab-2065006209">
+<div created="20200616144657561" modified="20200619183548309" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
 </div>
 <div created="20200418122101344" modified="20200617031729562" title="$:/state/tab/moresidebar-1850697562">
@@ -17074,7 +17081,7 @@ exports.context = contextWidget;
 <div bag="default" revision="1" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div created="20200619102908638" list="$:/ControlPanel CIDR Note" modified="20200619102918545" title="$:/StoryList">
+<div created="20200619175138680" list="$:/ControlPanel [[goalng CI build 二进制/tmp/zero-redis: No such file or directory]] musl Note" modified="20200619183356210" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20200519141000553" list="$:/.giffmex/Buttons/more-tiddler-edit-actions $:/core/ui/Buttons/delete $:/core/ui/Buttons/cancel $:/core/ui/Buttons/save" modified="20200521135635795" tags="$:/giffmex/bigeditarea" title="$:/tags/EditToolbar">
@@ -18115,7 +18122,7 @@ This plugin also requires the JSZip plugin ([[$:/plugins/tiddlywiki/jszip]]) to 
 <div created="20200616183644116" modified="20200616183644116" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.22/index.html" url="https://tiddlywiki.com/library/v5.1.22/index.html">
 <pre>loaded</pre>
 </div>
-<div created="20200616161922967" modified="20200619102908365" title="$:/temp/tobibeer/preview-1-tiddler">
+<div created="20200616161922967" modified="20200619175634097" title="$:/temp/tobibeer/preview-1-tiddler">
 <pre>CIDR</pre>
 </div>
 <div bag="default" created="20200414145220556" modified="20200616183714956" revision="0" title="$:/theme" type="text/vnd.tiddlywiki">
@@ -18315,6 +18322,9 @@ Edit a tiddler, and click the &lt;&lt;icon {{$:/core/images/chevron-down}} &quot
 
 </pre>
 </div>
+<div created="20200619180319289" modified="20200619180319289" title="alpine">
+<pre></pre>
+</div>
 <div created="20200504134325953" modified="20200521145923732" tags="$:/giffmex/tutorials" title="Autocompletion">
 <pre>Go to edit mode in this tiddler (use the {{$:/core/images/edit-button}} button above), and after one of the paragraphs, type `[[dav`. You should see the autocomplete popup with the tiddler `Dave Gifford` listed. Hit enter, which will accept the autocomplete suggestion and will close the link with brackets. 
 
@@ -18325,6 +18335,9 @@ Note that autocomplete does not work in iOS or other contexts where there is no 
 Go back to viewing mode, click the link you created to the `Dave Gifford` tiddler, and follow the instructions in that tiddler.
 
 When you are done here, return to [[Welcome to Stroll]] to continue the tutorial.</pre>
+</div>
+<div created="20200619181812974" modified="20200619181812974" title="ci">
+<pre></pre>
 </div>
 <div created="20200617040925395" modified="20200617041105040" tags="network" title="CIDR" type="text/x-markdown">
 <pre>[[Note]]
@@ -18337,9 +18350,6 @@ In terms of classiful [[networks]], there are five classes: A, B, C, D, and E. C
 &gt; I have written the subnet masks in a dotted-decimal format and as a slash notation, that is, /8, /16, /24. This is often also referred to as [[CIDR]] notation. We will cover [[CIDR]] in more detail shortly. What this slash notation is telling us is the number of bits that have been allocated to the subnet mask (or network element). Therefore, Class A has 8 bits allocated to the network element, Class B has 16 bits, and Class C has 24 bits.
 
 </pre>
-</div>
-<div created="20200617041105043" modified="20200617041105043" title="CIDR 1">
-<pre></pre>
 </div>
 <div created="20200423144522416" modified="20200521145919666" tags="$:/giffmex/tutorials" title="Dave Gifford">
 <pre>Congratulations! You found the tiddler with my name. See the links below in the reference section (below the horizontal line)? Good. 
@@ -18380,8 +18390,14 @@ Now go back to [[Welcome to Stroll]] to continue the tutorial.</pre>
 *The [ext[TiddlyWiki toolmap|https://dynalist.io/d/zUP-nIWu2FFoXH-oM7L7d9DM]] is a list of hudreds of plugins you can use with Stroll. Keep in mind that plugins that tamper with the layout could break the Stroll layout.
 </pre>
 </div>
-<div created="20200617082304992" modified="20200617092328868" tags="linux golang ci" title="goalng CI build 二进制/tmp/zero-redis: No such file or directory" type="text/x-markdown">
-<pre>`go releaser`在CI里编译好的文件，跑起来提示：/tmp/zero-redis: No such file or directory
+<div created="20200617082304992" modified="20200619181812969" tags="linux golang ci" title="goalng CI build 二进制/tmp/zero-redis: No such file or directory" type="text/x-markdown">
+<pre>[[Note]]
+
+[How does apt-get work exactly?](https://yonghaowu.github.io//2016/12/10/howLinuxInstallWorks/)
+
+[ldd 查看程序依赖库](https://linuxtools-rst.readthedocs.io/zh_CN/latest/tool/ldd.html)
+
+`go releaser`在CI里编译好的文件，跑起来提示：/tmp/zero-redis: No such file or directory
 
 `readelf -a  /tmp/zero-redis  | less`可以看到，二进制依赖了这个动态链接库：
 &gt;       [Requesting program interpreter: /lib/ld-musl-x86_64.so.1]
@@ -18395,7 +18411,9 @@ ls: cannot access '/lib/ld-musl-x86_64.so.1': No such file or directory
 运行一切顺利。
 
 ## 解释
-[[musl]]就是一个libc库(简单说就是C的库函数实现）
+[[musl]]就是一个libc库(简单说就是C的库函数实现），gitlab [[ci]] 发布时是拉了goreleaser的[镜像](https://github.com/goreleaser/goreleaser/blob/master/Dockerfile)，这是基于[[alpine]]的，
+[[alpine]]默认使用的就是[[musl]]，所以在CI上编译出来的二进制就是依赖了[[musl]]。
+
 &gt; [[musl]] is an implementation of the C standard library built on top of the Linux system call API, including interfaces defined in the base language standard, POSIX, and widely agreed-upon extensions. musl is lightweight, fast, simple, free, and strives to be correct in the sense of standards-conformance and safety.</pre>
 </div>
 <div created="20200616145626358" modified="20200616145626358" title="golang">
