--- a/wiki/index.html
+++ b/wiki/index.html
@@ -10963,8 +10963,8 @@ $:/config/ViewToolbarButtons/Visibility/$(listItem)$
 <div created="20200616145404278" modified="20200619183543310" title="$:/GitHub/Repo">
 <pre>YongHaoWu/YongHaoWu.github.io</pre>
 </div>
-<div created="20200616145354076" modified="20200616155734989" title="$:/GitHub/Username">
-<pre>YongHao</pre>
+<div created="20200616145354076" modified="20200619183555435" title="$:/GitHub/Username">
+<pre>YongHaoWu</pre>
 </div>
 <div bag="default" created="20200210162320311" creator="HC Haase" modified="20200521150911135" modifier="HC Haase" revision="0" tags="$:/tags/Macro" title="$:/HCHaase/macros/icon" type="text/vnd.tiddlywiki">
 <pre>\define icon(icon navigate tooltip) 
